# ai-chat-app

./: QWEN.md  README.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/: .gitignore  Makefile  alembic.ini  pyproject.toml  requirements.txt  run_server.py  setup_db.py  test_auth.py  test_direct.py
backend/alembic/: env.py
backend/src/: main.py
backend/src/api/: auth.py  auth_router.py  deps.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: user.py
backend/src/schemas/: auth.py
backend/src/services/: auth.py  auth_service.py  password.py
backend/tests/: call_apis.py  test_api_auth.py  test_auth.py  test_direct.py
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  index.html  jest.config.cjs  package-lock.json  package.json
frontend/src/: App.tsx  setupTests.ts
frontend/src/pages/: Login.tsx  ProtectedApp.tsx  Register.tsx
frontend/src/services/: auth.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts
frontend/src/utils/: validators.ts
frontend/test/: App.test.tsx  LoginForm.test.tsx  ProtectedRoute.test.tsx  RegisterForm.test.tsx
frontend/test/__mocks__/: authService.js
specs/001-auth-jwt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth-jwt/checklists/: requirements.md
specs/001-auth-jwt/contracts/: login.json  logout.json  register.json
specs/002-ai-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+9 files in other folders)
